--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "@prisma/client": "^5.16.1",
     "express": "^4.19.2",
     "mysql2": "^3.10.2",
-    "pg": "^8.12.0",
-    "prisma": "^2.30.3"
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prisma": "^5.16.1"
   },
   "keywords": [],
   "author": "",
