--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   db:
@@ -11,19 +11,22 @@ services:
       MYSQL_PASSWORD: root
     volumes:
       - db_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
-      - '3306:3306'
+      - "3306:3306"
 
   app:
     build: .
-    container_name: node_app
-    environment:
-      DATABASE_URL: mysql://user:root@db:3306/sunska-db
-      JWT_SECRET: your_jwt_secret
+    command: sh -c "sleep 10 && dockerize -wait tcp://db:3306 -timeout 20s npx prisma migrate dev --name init && npm run dev"
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
-      - '3000:3000'
+      - "3000:3000"
     depends_on:
       - db
+    environment:
+      DATABASE_URL: "mysql://user:root@db:3306/sunska-db"
 
 volumes:
   db_data:
