--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     depends_on:
       - db
     environment:
-      DATABASE_URL: "mysql://user:root@db:3306/sunska-db"
+      DATABASE_URL: "mysql://root:root@db:3306/sunska-db"
 
 volumes:
   db_data:
